# VapourSynth-Retinex

./: GNUmakefile  README.md  configure  meson.build
include/: Gaussian.h  Helper.h  MSR.h  MSRCP.h  Specification.h
msvc/: Retinex.sln  Retinex.vcxproj  Retinex.vcxproj.filters  VapourSynth.Plugin.Win32.props  VapourSynth.Plugin.x64.props
source/: Gaussian.cpp  MSR.cpp  MSRCP.cpp  VSPlugin.cpp
